--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
 
 jobs:
   build:
+    permissions:
+      contents: read
+      packages: write
     name: "build"
     runs-on: "ubuntu-latest"
     steps:
@@ -18,6 +21,6 @@ jobs:
       - uses: "docker/build-push-action@v4"
         with:
           build-args: |
-            ARTIFACTS_TOKEN=${{ secrets.ARTIFACTS_TOKEN }}
+            REGISTRY_TOKEN=${{ secrets.GITHUB_TOKEN }}
             BRANCH=${{ steps.extract_branch.outputs.branch }}
           push: false
