--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "@di-on-solutions/functional-assertions",
+  "name": "@public-cloud-group/functional-assertions",
   "type": "module",
-  "version": "1.1.1",
+  "version": "1.0.0",
   "scripts": {
     "build": "gulp",
     "test": "ava",
     "doc": "typedoc --out docs src/index.ts"
   },
   "dependencies": {
-    "tslib": "^2.4.0"
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "@types/node": "^20.3.2",
-    "ava": "^5.3.1",
-    "execa": "^7.1.1",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@swc/core": "^1.4.0",
+    "@types/node": "^20.11.17",
+    "ava": "^6.1.1",
+    "execa": "^8.0.1",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-rollup": "^2.17.0",
     "gulp-tslint": "^8.1.4",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "rollup": "^3.25.3",
-    "rollup-plugin-dts": "^5.3.0",
+    "rollup": "^4.9.6",
+    "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-includepaths": "^0.2.4",
     "rollup-plugin-pure-annotation": "^0.0.2",
-    "rollup-plugin-typescript2": "^0.35.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
-    "typedoc": "^0.24.8",
-    "typescript": "^5.1.3"
+    "typedoc": "^0.25.7",
+    "typescript": "^5.3.3",
+    "undici-types": "^6.6.2"
   },
+  "license": "Apache-2.0",
   "resolutions": {
     "babylon": "npm:@babel/parser@^7.19.3"
   },
@@ -37,7 +39,8 @@
       "ts": "module"
     },
     "nodeArguments": [
-      "--loader=ts-node/esm",
+      "--import",
+      "./swc-node.mjs",
       "--experimental-specifier-resolution=node"
     ]
   }
